# DirectXShaderCompiler

./: .gitmodules
docs/: DXIL.rst
include/dxc/: HlslIntrinsicOp.h  dxcapi.internal.h
include/dxc/DXIL/: DxilConstants.h  DxilFunctionProps.h  DxilInstructions.h  DxilShaderModel.h  DxilTypeSystem.h
include/dxc/DxilContainer/: DxilPipelineStateValidation.h
include/dxc/HLSL/: DxilGenerationPass.h  HLModule.h
include/dxc/Support/: HLSLOptions.h  HLSLOptions.td
include/llvm/: InitializePasses.h
include/llvm/CodeGen/: MachineBasicBlock.h
include/llvm/Transforms/IPO/: PassManagerBuilder.h
lib/: CMakeLists.txt
lib/CodeGen/: CMakeLists.txt  LiveIntervalUnion.cpp  WinEHPrepare.cpp
lib/DXIL/: DxilModule.cpp  DxilOperations.cpp  DxilShaderModel.cpp  DxilTypeSystem.cpp
lib/DxcSupport/: HLSLOptions.cpp
lib/HLSL/: CMakeLists.txt  DxcOptimizer.cpp  HLOperationLower.cpp  RPS.cpp
lib/Transforms/: CMakeLists.txt
lib/Transforms/IPO/: PassManagerBuilder.cpp
lib/Transforms/Instrumentation/: AddressSanitizer.cpp  ThreadSanitizer.cpp  memorysanitizer.cpp
lib/Transforms/Scalar/: ScalarReplAggregatesHLSL.cpp
projects/: CMakeLists.txt
tools/clang/lib/AST/: ASTContextHLSL.cpp  Type.cpp  TypePrinter.cpp
tools/clang/lib/CodeGen/: BackendUtil.cpp  CGHLSLMS.cpp  CGHLSLRuntime.h  CodeGenAction.cpp  CodeGenModule.cpp
tools/clang/lib/Parse/: ParseDecl.cpp  (+3 more)
tools/clang/tools/: CMakeLists.txt
tools/clang/tools/rps-hlslc/: CMakeLists.txt  RpsHlslc.cpp  RpsHlslcDummyDXIL.cpp  version.inc
tools/rps-hlslc/: RpsHlslc.cpp  host.c
utils/hct/: gen_intrin_main.txt  hctdb.py  hctdb_instrhelp.py
(+20 files in other folders)
